add critique of vulnerability

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Patrick Steadman</title>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
-<meta name='description' content="Patrick Steadman writer, programmer, and co-founder of Computer Lab."
+<meta name='description' content="Patrick Steadman is a writer, programmer, and co-founder of Computer Lab."
 <link rel="author" href="https://plus.google.com/112533683849578002493">
 <link rel="stylesheet" href="theme.css">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -19,12 +19,12 @@
     <li><a target='_blank' href='http://github.com/ptsteadman'>GitHub</a></li>
     <li><a target='_blank' href='https://www.linkedin.com/profile/view?id=186210334'>LinkedIn</a></li>
   </ul>
-  <p>Welcome to my vanity website.</p> 
+  <p>Welcome to my vanity website.</p>
   <br>
   <img src="https://pbs.twimg.com/media/CXMbbknVAAMaFhG.jpg">
   <br>
   <br>
-  <p>Currently working at <a href="http://computerlab.io">Computer Lab</a>.</p>
+  <p>Currently working at <a href="https://computerlab.io">Computer Lab</a>.</p>
   <h2>Programming</h2>
   <ul>
     <li>
@@ -58,6 +58,10 @@
   </ul>
   <h2>Writing</h2>
   <ul>
+    <li>
+      <a target='_blank' href='https://computerlab.io/2017/07/17/a-critique-of-vulnerability/'>A Critique of Vulnerability</a>
+      <p>Four types of vulnerability that you shouldn't lean into.</p>
+    </li>
     <li>
       <a target='_blank' href='http://www.onscreentoday.com/screenshot/pattern-language'>Pattern Language</a>
       <p>Exploring the patterns that make buildings, software, and art feel alive.</p>
@@ -115,7 +119,7 @@
     </li>
   </ul>
   <br>
-  <p><i>&nbsp;Last Updated: July 16th, 2017</i></p>
+  <p><i>&nbsp;Last Updated: July 21st, 2017</i></p>
 </div>
 </body>
 <script>
@@ -126,7 +130,6 @@
 
   ga('create', 'UA-56783175-1', 'auto');
   ga('send', 'pageview');
-
 </script>
 </html>
 
